# mcp-logger

./: Cargo.toml  README.ar.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.th.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  test_mcp_manual.sh
docs/: CROSS_PLATFORM_SETUP.ar.md  CROSS_PLATFORM_SETUP.hi.md  CROSS_PLATFORM_SETUP.ja.md  CROSS_PLATFORM_SETUP.ko.md  CROSS_PLATFORM_SETUP.md  CROSS_PLATFORM_SETUP.ru.md  CROSS_PLATFORM_SETUP.th.md  CROSS_PLATFORM_SETUP.vi.md  CROSS_PLATFORM_SETUP.zh-CN.md  CROSS_PLATFORM_SETUP.zh-TW.md  LM_STUDIO_SETUP.ar.md  LM_STUDIO_SETUP.hi.md  LM_STUDIO_SETUP.ja.md  LM_STUDIO_SETUP.ko.md  LM_STUDIO_SETUP.md  LM_STUDIO_SETUP.ru.md  LM_STUDIO_SETUP.th.md  LM_STUDIO_SETUP.vi.md  LM_STUDIO_SETUP.zh-CN.md  LM_STUDIO_SETUP.zh-TW.md  MANUAL.ar.md  MANUAL.hi.md  MANUAL.ja.md  MANUAL.ko.md  MANUAL.md  MANUAL.ru.md  MANUAL.th.md  MANUAL.vi.md  MANUAL.zh-CN.md  MANUAL.zh-TW.md  MCP_PROTOCOL_EXAMPLES.ar.md  MCP_PROTOCOL_EXAMPLES.hi.md  MCP_PROTOCOL_EXAMPLES.ja.md  MCP_PROTOCOL_EXAMPLES.ko.md  MCP_PROTOCOL_EXAMPLES.md  MCP_PROTOCOL_EXAMPLES.ru.md  MCP_PROTOCOL_EXAMPLES.th.md  MCP_PROTOCOL_EXAMPLES.vi.md  MCP_PROTOCOL_EXAMPLES.zh-CN.md  MCP_PROTOCOL_EXAMPLES.zh-TW.md  (+1 more)
src/: core_syslog.rs  main.rs
